--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     </header>
 
     <section class="home" id="home">
-      <img src="C:\Resumes\Portfolio-main\Portfolio-main\WhatsApp Image 2025-07-27 at 11.12.45_1ff20bf5.jpg" alt="Profile Picture of Anusha" class="profile-picture"/>
+      <img src="WhatsApp Image 2025-07-27 at 11.12.45_1ff20bf5.jpg" alt="Profile Picture of Anusha" class="profile-picture"/>
       <div class="home-container">
         <h3>Hello, I am</h3>
         <h1 class="name">Anusha Yashadapu,</h1>
