--- a/index.html
+++ b/index.html
@@ -271,7 +271,7 @@
         -->
         <div class="project-card">
           <img
-            src="C:\Resumes\Portfolio-main\Portfolio-main\WhatsApp Image 2025-07-27 at 13.00.42_ec869a74.jpg"
+            src="WhatsApp Image 2025-07-27 at 13.00.42_ec869a74.jpg"
             alt="project8"
             class="project-image"
           />
@@ -295,19 +295,19 @@
       <h2 class="heading">My<span> Certificates</span></h2>
       <div class="certificates-card">
         <img
-          src="C:\Resumes\Portfolio-main\Portfolio-main\WhatsApp Image 2025-07-25 at 14.36.34_493368b5.jpg"
+          src="WhatsApp Image 2025-07-25 at 14.36.34_493368b5.jpg"
           alt="Embededd System"
         />
-        <img src="C:\Resumes\Portfolio-main\Portfolio-main\WhatsApp Image 2025-07-28 at 11.53.08_9e0b6d85.jpg" alt="html,css"
+        <img src="WhatsApp Image 2025-07-28 at 11.53.08_9e0b6d85.jpg" alt="html,css"
         />
         <img
-        src="C:\Resumes\Portfolio-main\Portfolio-main\WhatsApp Image 2025-07-28 at 11.54.14_47ead30d.jpg"
+        src="WhatsApp Image 2025-07-28 at 11.54.14_47ead30d.jpg"
         alt="IoT"
         />
-        <img src="C:\Resumes\Portfolio-main\Portfolio-main\WhatsApp Image 2025-07-28 at 12.04.58_c9569d41.jpg"
+        <img src="WhatsApp Image 2025-07-28 at 12.04.58_c9569d41.jpg"
         alt="PCB Design" 
         />
-        <img src="C:\Resumes\Portfolio-main\Portfolio-main\WhatsApp Image 2025-07-28 at 12.05.29_94d566f8.jpg"
+        <img src="WhatsApp Image 2025-07-28 at 12.05.29_94d566f8.jpg"
          alt="Event participation"
          />
       </div>
