--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
       <div class="home-container">
         <h3>Hello, I am</h3>
         <h1 class="name">Anusha Yashadapu,</h1>
-        <h3>An <span>Your Next developer</span></h3>
+        <h3>Your<span>Next developer</span></h3>
         <p>
           I'm a passionate front-end developer with a keen eye for creating intuitive and 
           engaging user experiences. As an aspiring software developer, 
